--- a/package.json
+++ b/package.json
@@ -5,6 +5,16 @@
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://www.electronjs.org",
+  "build": {
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "wangshuo7",
+        "repo": "Hooyoo-electron",
+        "releaseType": "release"
+      }
+    ]
+  },
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
