--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
     "@element-plus/icons-vue": "^2.1.0",
+    "@vueuse/core": "^10.7.0",
     "electron-updater": "^6.1.1",
     "swiper": "^11.0.5"
   },
