feat：自定义标题栏

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -14,7 +14,7 @@ files:
 asarUnpack:
   - resources/**
 win:
-  icon: /public/yoo.png
+  icon: /public/huyou.png
   target: nsis
   executableName: hooyoo-electron
 nsis:
