--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@electron-toolkit/utils": "^2.0.0",
     "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.7.0",
+    "adm-zip": "^0.5.10",
     "axios": "^1.6.2",
+    "electron-store": "^8.1.0",
     "electron-updater": "^6.1.1",
     "js-base64": "^3.7.5",
     "pinia": "^2.1.7",
