--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vueuse/integrations": "^10.7.1",
     "adm-zip": "^0.5.10",
     "axios": "^1.6.2",
+    "bufferutil": "^4.0.8",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.1",
     "js-base64": "^3.7.5",
