feat：缓存直播间地址到本地

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pinia": "^2.1.7",
     "protobufjs": "^7.2.6",
     "qrcode": "^1.5.3",
+    "rebuild": "^0.1.2",
     "swiper": "^11.0.5",
     "ws": "^8.16.0"
   },
