--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-updater": "^6.1.1",
     "js-base64": "^3.7.5",
     "md5": "^2.3.0",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "protobufjs": "^7.2.6",
     "qrcode": "^1.5.3",
