--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postinstall": "electron-builder install-app-deps",
     "build:win": "npm run build && electron-builder --win --config",
     "build:mac": "npm run build && electron-builder --mac --config",
-    "build:linux": "npm run build && electron-builder --linux --config"
+    "build:linux": "npm run build && electron-builder --linux --config",
+    "version": "node update-version.js --"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
