--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,3 +1,3 @@
 provider: generic
-url: https://example.com/auto-updates
+url: http://61.160.236.29:886/box/upload/dist
 updaterCacheDirName: hooyoo-electron-updater
