--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "qrcode": "^1.5.3",
     "rebuild": "^0.1.2",
     "swiper": "^11.0.5",
+    "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
