--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rebuild": "^0.1.2",
     "swiper": "^11.0.5",
     "uuid": "^9.0.1",
+    "vue-i18n": "^9.9.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
