--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hooyoo-electron",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "An Electron application with Vue and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -32,6 +32,7 @@
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.1",
     "js-base64": "^3.7.5",
+    "log4js": "^6.9.1",
     "md5": "^2.3.0",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
