feat：主页，开发者中心

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -17,6 +17,7 @@ win:
   icon: /public/huyou.png
   target: nsis
   executableName: hooyoo-electron
+  requestedExecutionLevel: highestAvailable
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
