--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "uuid": "^9.0.1",
     "vue-i18n": "^9.9.1",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-marquee": "^4.2.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
