--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,3 +1,3 @@
 provider: generic
-url: http://61.160.236.29:886/box/upload/dist
+url: http://cdn.huyouyun.cn/huyouyunbox
 updaterCacheDirName: hooyoo-electron-updater
