--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vueuse/core": "^10.7.0",
     "@vueuse/integrations": "^10.7.1",
     "adm-zip": "^0.5.10",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.2",
     "bufferutil": "^4.0.8",
     "electron-store": "^8.1.0",
